# game-activity

./: README.md  package.json
.github/workflows/: publish.yml
background/: .gitignore  package.json  tsconfig.json
background/src/: main.ts
src/: App.tsx  main.tsx  style.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pages/: DateRange.tsx  SingleDay.tsx  TotalTime.tsx
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  style.scss  utils.ts
ui/src/components/: BarComponent.tsx  PieComponent.tsx  PlotComponent.tsx
ui/src/pages/: Bar.tsx  Barpage.tsx  Pie.tsx  Piepage.tsx  Plotpage.tsx  SingleDay.tsx  TotalTime.tsx  Week.tsx
ui/src/stores/: data.ts
